parse xml into json, mark as artifact

--- a/.buildkite/premerge.steps.yaml
+++ b/.buildkite/premerge.steps.yaml
@@ -80,6 +80,7 @@ steps:
     <<: *windows
     artifact_paths:
       - logs/**/*
+      - perftest-results/**/*
 
   - label: ":windows: ~ test"
     id: "test-windows"
