--- a/workers/unity/Packages/manifest.json
+++ b/workers/unity/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.ide.rider": "1.1.4",
+    "com.unity.test-framework": "1.1.14",
     "com.unity.test-framework.performance": "2.2.0-preview",
     "com.unity.testtools.codecoverage": "0.2.3-preview",
     "com.unity.ugui": "1.0.0",
